# cobamp

./: pyproject.toml  setup.py
src/cobamp/core/: linear_systems.py  models.py  optimization.py
src/cobamp/gpr/: core.py
