[project]
name = "cobamp"
version = "0.1.0"
description = "Constraint-based modeling framework for the enumeration of pathway analysis concepts"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "boolean-py>=3.8",
    "indexed>=1.2.1",
    "matplotlib>=3.5.2",
    "numpy>=1.21.6",
    "optlang>=1.5.2",
    "pandas>=1.3.5",
    "pathos>=0.2.9",
    "scipy>=1.7.3",
]
