[project]
name = "cobamp"
version = "0.2.2"
description = "Constraint-based modeling framework for the enumeration of pathway analysis concepts"
authors = [
    {name = "Jorge Ferreira", email = "jorge.ferreira@ceb.uminho.pt"},
    {name = "Vítor Vieira"}
]
readme = "README.rst"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
dependencies = [
    "boolean-py>=3.8",
    "indexed>=1.2.1",
    "matplotlib>=3.5.2",
    "numpy>=1.21.6",
    "optlang>=1.5.2",
    "pandas>=1.3.5",
    "pathos>=0.2.9",
    "scipy>=1.7.3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Repository = "https://github.com/BioSystemsUM/cobamp"
Homepage = "https://github.com/BioSystemsUM/cobamp"
Documentation = "http://cobamp.readthedocs.io/"
Issues = "https://github.com/BioSystemsUM/cobamp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"